--- a/template.jsonc
+++ b/template.jsonc
@@ -2,7 +2,7 @@
     "format_version": "1.16.100",
     "minecraft:item": {
         "description": {
-            "identifier": "x128:{固有ID}" //! "x128"は名前空間名, 統一しないといけないから変更しない
+            "identifier": "x128:{固有ID}" //! "x128"は名前空間名, 変更しない
         },
 
         "components": {
@@ -24,7 +24,7 @@
                 "nutrition": 0, // 満腹度回復力
                 "effects": [ // 効果
                     {
-                        "name": "{エフェクト名}", //! エフェクト名は"template/efect-name.md"を参照
+                        "name": "{エフェクト名}", //! エフェクト名は"template/effect-name.md"を参照
                         "chance": 1.0, // エフェクトが掛かる確率
                         "duration": 120, // 効果時間(tick), 1秒20tick
                         "amplifier": 5 // レベル
